--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@radix-ui/primitive": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "headlessui": "^0.0.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "swr": "^2.2.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3"
   }
 }
