--- a/package.json
+++ b/package.json
@@ -9,21 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.17",
+    "@radix-ui/colors": "^2.1.0",
     "@radix-ui/primitive": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/auth-ui-react": "^0.4.5",
+    "@supabase/auth-ui-shared": "^0.1.7",
+    "@supabase/postgrest-js": "^1.8.4",
+    "@supabase/storage-js": "^2.5.4",
+    "@supabase/supabase-js": "^2.38.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
     "headlessui": "^0.0.0",
+    "lodash": "^4.17.21",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "swr": "^2.2.0",
+    "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.36.1"
   }
 }
